Fixed Credits page titles and white spaces.

--- a/src/_sass/layouts/_page.scss
+++ b/src/_sass/layouts/_page.scss
@@ -282,3 +282,19 @@ code {
   overflow-y: hidden;
   padding: 0 1rem;
 }
+
+.credits-section {
+  margin-bottom: 2rem;
+
+  h3 {
+    padding: 1rem 0 0.5rem 0;
+  }
+
+  h4 {
+    padding: 1.25rem 0 0.5rem 0;
+  }
+
+  h3 + h4 {
+    padding: 0 0 0.5rem 0;
+  }
+}
